replace image with a placeholder fix the spacing around contnent in header

--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ a{
 .box1{
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  gap: 20px;
+  gap: 70px;
+  justify-content: center;
+  justify-content: center;
   
 
   
@@ -63,14 +63,7 @@ a{
   
 }
 
-.box2 button{
-  color: #E5e7EB;
-  background-color: #0099ff ;
-  margin-top: 15px;
-  font-size: 18px;
-  border-radius: 25px;
-  
-}
+.button-10 { display: flex; flex-direction: column; align-items: center; padding: 6px 14px; font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif; border-radius: 6px; border: none; color: #fff; background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%); background-origin: border-box; box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2); user-select: none; -webkit-user-select: none; touch-action: manipulation; } .button-10:focus { box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5); outline: 0; }
 
 .hero-main{
   font-size: 48px;
@@ -79,15 +72,14 @@ a{
 
 }
 
-div img{
-width: 500px;
-height: 200px;
-object-fit: fill;
-}
-
 .image{
   display: flex;
+  background-color: grey;
+  align-items: center;
   justify-content: center;
-  align-items: center ;
+  flex: 1;
+  max-width: 500px;
+  
+  
+  
 }
-
